@@ -77,6 +77,8 @@
 
 #define NNEIGHBORHOODS 9
 
+#define DEFAULT_SHOWNBSTAT    FALSE /**< show statistics on neighborhoods? */
+
 /*
  * limit parameters for sub-SCIPs
  */
@@ -461,6 +463,7 @@ struct SCIP_HeurData
    SCIP_Bool             copycuts;           /**< should cutting planes be copied to the sub-SCIP? */
    SCIP_Bool             uselocalredcost;    /**< should local reduced costs be used for generic (un)fixing? */
    SCIP_Bool             initduringroot;     /**< should the heuristic be executed multiple times during the root node? */
+   SCIP_Bool             shownbstat;         /**< show statistics on neighborhoods? */
 };
 
 /** event handler data */
@@ -1088,6 +1091,9 @@ void printNeighborhoodStatistics(
    int i;
    int j;
    HISTINDEX statusses[] = {HIDX_OPT, HIDX_INFEAS, HIDX_NODELIM, HIDX_STALLNODE, HIDX_SOLLIM, HIDX_USR, HIDX_OTHER};
+
+   if( ! heurdata->shownbstat )
+      return;
 
    SCIPinfoMessage(scip, file, "Neighborhoods      : %10s %10s %10s %10s %10s %10s %10s %10s %10s %10s %4s %4s %4s %4s %4s %4s %4s %4s\n",
             "Calls", "SetupTime", "SolveTime", "SolveNodes", "Sols", "Best", "Exp3", "EpsGreedy", "UCB", "TgtFixRate",
@@ -3999,6 +4005,10 @@ SCIP_RETCODE SCIPincludeHeurAlns(
    SCIP_CALL( SCIPsetHeurInit(scip, heur, heurInitAlns) );
    SCIP_CALL( SCIPsetHeurInitsol(scip, heur, heurInitsolAlns) );
    SCIP_CALL( SCIPsetHeurExit(scip, heur, heurExitAlns) );
+
+   SCIP_CALL( SCIPaddBoolParam(scip, "heuristics/" HEUR_NAME "/shownbstat",
+         "show statistics on neighborhoods?",
+         &heurdata->shownbstat, TRUE, DEFAULT_SHOWNBSTAT, NULL, NULL) );
 
    /* add alns primal heuristic parameters */
    SCIP_CALL( SCIPaddLongintParam(scip, "heuristics/" HEUR_NAME "/maxnodes",
